Updated source code to last versions

--- a/utils/config.ini
+++ b/utils/config.ini
@@ -1,4 +1,4 @@
-; données de connexion 
-login = "bartosz"
-password = "bartOOOSw"
-api_key = "xx00xxYY__AEZRS"
+; données de connexion
+login = ""
+password = ""
+api_key = ""
